Bug 492019 - Label names for Keyboard Shortcuts KCM: "KWin" and "plasmashell" names are more developer-friendly than user-friendly
Summary: Label names for Keyboard Shortcuts KCM: "KWin" and "plasmashell" names are mo...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_keys (other bugs)
Version First Reported In: 6.1.4
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2024-08-22 04:30 UTC by Michael
Modified: 2025-05-10 10:14 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael 2024-08-22 04:30:51 UTC
SUMMARY

When I train people to use a new KDE-based installation, there is waaaaay less jargon-y terms than before, which makes my job much easier. 

But I found a place where it could be a bit better. 

In System Settings' Keyboard Shortcuts, we see items like "KDE Power Manager." That is super clear for the user. We don't say "Powerdevil", the underlying component name. 

Yet on the other hand, we see "KWin" instead of "KDE Window Manager". Can we make this more clear too?

Same for "plasmashell." Instead that could be, say,"KDE Desktop Manager". 

My rationale is that "KWin" is an internal component name that users do not directly install or deal with. I would have to tell a newbie about this label, "So 'KWin' is an internal developer name that means 'the thing that deals with all the windows in a KDE-based setup'. Just ignore it and pretend it says 'Window part'". It makes KDE less friendly when the user has to learn internal component names. 

I know that power users like to say KWin because it's short and unique. But on the other hand, power users will know what "KDE Window Manager" alludes to. And it's also congruent with "KDE Power Manager" in the list.

Same for "plasmashell" being replaced by "KDE Desktop Manager".

STEPS TO REPRODUCE

1. Go to System Settings -> Keyboard -> Shortcuts

OBSERVED RESULT

Notice that there's "KWin" and "plasmashell" service names in the "System Services" section

EXPECTED RESULT

Make "KWin" and "plasmashell" be more end-user descriptive and less developer-oriented the way that "KDE Power Manager" replaces the internal name of "Powerdevil".

SOFTWARE/OS VERSIONS

Operating System: KDE neon 6.0
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.5.0
Qt Version: 6.7.2
Comment 1 fanzhuyifan 2024-08-22 04:54:10 UTC
Makes sense
Comment 2 Bug Janitor Service 2024-08-22 04:59:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6299
Comment 3 fanzhuyifan 2024-08-22 05:03:15 UTC
Not sure what plasmashell should be called. @nate do you have any comments here? Here are some ideas:

Plasma Desktop
Plasma Desktop Manager
KDE Desktop Manager
KDE Desktop

Maybe KDE is better than plasma -- should we expect our users to know what plasma is and how it is different from kde?
Comment 4 Nate Graham 2024-08-22 15:12:31 UTC
"plasmashell" could stand to be replaced with "Plasma Desktop", but the word "Plasma" is a user-facing brand name we use in a zillion places; I wouldn't replace this with something more generic.

"KWin" is also brand name, though admittedly a more obscure one, so I'm slightly more in support or changing that to something descriptive.
Comment 5 Michael 2024-08-22 16:41:22 UTC
"Plasma Desktop" is fine, it's consistent and is promoted heavily.

"KWin" is fine to be replaced with simply "Window manager" for end-user facing labels. If we were to prefix everything with "KDE" then we could easily go overboard because *everythin*g in System Settings is KDE technology.

I would like to see the HIG talk about user-facing proper nouns. It goes over what our acronyms should be [https://develop.kde.org/hig/text_and_labels/#acronyms], but we don't have a common and congruent way of relating what "KWin" is. 

I'm thinking of opening a bug report for the HIG for user-facing KDE proper nouns so that we're all on the same page:

Akonadi = ??
Baloo = ?? 
Powerdevil = KDE Power Management (maybe drop the KDE part?)
KWin = ?

Do we need this?
Comment 6 Nate Graham 2024-08-22 16:50:33 UTC
It's a good point. We're currently not super consistent about how we present internal technologies to users; sometimes we use brand names, sometimes we use descriptive text, and often even if we surface descriptive text in the UI, we and other users use the brand name/internal name in social media. Feel free to open an Issue about it in https://invent.kde.org/documentation/develop-kde-org/-/issues/.
Comment 7 Michael 2024-08-22 17:17:26 UTC
Thanks for the encouragement. Done.
https://invent.kde.org/documentation/develop-kde-org/-/issues/175
Comment 8 Bug Janitor Service 2024-08-22 17:48:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6304
Comment 9 fanzhuyifan 2024-08-23 15:05:19 UTC
Git commit af8de6be74009a2a16f7013d52a54bf96bc8a943 by Yifan Zhu.
Committed on 23/08/2024 at 14:54.
Pushed by fanzhuyifan into branch 'master'.

KeyboardLayout: always set componentDisplayName for shortcut

Otherwise the last call uses the default, which overrides the previous
calls.

Test plan:
- Go to system settings - shortcuts
- Verify the category for layout switching is now correctly called
  "Keyboard Layout Switcher"

M  +2    -0    src/keyboard_layout.cpp

https://invent.kde.org/plasma/kwin/-/commit/af8de6be74009a2a16f7013d52a54bf96bc8a943
Comment 10 Bug Janitor Service 2025-05-06 19:08:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2974
Comment 11 Nate Graham 2025-05-08 21:10:42 UTC
Git commit ea2d29c71b62330d3cb6b63052eb26f8d5b3332c by Nate Graham.
Committed on 08/05/2025 at 19:36.
Pushed by ngraham into branch 'master'.

kcms/keys: use nicer names for KWin and Plasma

Right now the KCM pulls the name from KAboutData, which is a user-facing
name and is usually fine. However KWin and Plasma are system services
that not unreasonably set rather technical names. When these names are
snown in the KCM, the HIG recommendation to avoid displaying internal
jargon to users is violated.

Because a proposal to change the KAboutData string in KWin was rejected,
do it here instead.
FIXED-IN: 6.4.0

M  +9    -0    kcms/keys/basemodel.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/ea2d29c71b62330d3cb6b63052eb26f8d5b3332c