kcms/keys: use nicer names for KWin and Plasma

Right now the KCM pulls the name from KAboutData, which is a user-facing
name and is usually fine. However KWin and Plasma are system services
that not unreasonably set rather technical names. When these names are
snown in the KCM, the HIG recommendation to avoid displaying internal
jargon to users is violated.

Because a proposal to change the KAboutData string in KWin was rejected,
do it here instead.

BUG: 492019
FIXED-IN: 6.4.0